<resources>
    <string name="app_name">LepuDevice</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Data</string>
    <string name="title_history">History</string>
    <string name="title_settings">Setting</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="prompt">tips</string>
    <string name="open">Open</string>
    <string name="ignore">Ignore</string>
    <string name="permission_bluetooth">Bluetooth needs to be turned on to connect the device.</string>
    <string name="permission_location_reason">Location permission is a permission that the program must rely on when using it.</string>
    <string name="permission_location_setting">You need to manually enable permissions in the application settings.</string>
    <string name="start_update">Start Upgrade</string>
    <string name="use_str">How to use</string>
    <string name="open_boot_str">Please press [POWER]</string>
    <string name="search">Searching</string>
    <string name="during_upgrade">Upgrading...</string>
    <string name="update_successed">Upgrade Successful</string>
    <string name="update_successful">Upgrade failed</string>
    <string name="version">version</string>
    <string name="ok">OK</string>
    <string name="upgrade_unsuccessful">Upgrade failed, please power off and restart</string>
    <string name="low">≥</string>
    <string name="app_version">App version：LepuDevice V0.0.3</string>
    <string name="device_type">Device type：</string>
    <string name="pair_connect">Pair connect</string>
    <string name="bluetooth_device">Device</string>
    <string name="connect_state">Connect state</string>
    <string name="disconnect">Disconnect</string>
    <string name="handling">Processing, please wait...</string>
    <string name="cannot_pair_connect">This device type does not support pairing connections!</string>
    <string name="connecting">Connecting</string>
    <string name="state_connect">State：connected</string>
    <string name="state_disconnect">State：disconnected</string>
    <string name="bluetooth_name">Name：</string>
    <string name="bluetooth_address">Address：</string>
    <string name="all">All</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="scan">Scan</string>
    <string name="device_code">Device code：</string>
    <string name="device_old_code">Device old code：</string>
    <string name="device_new_code">Device new code：</string>
    <string name="home_tips">(After the device is successfully connected, you can proceed to interface 2, 3, and 4 for operation testing)</string>
    <string name="burn_info">Burn info</string>
    <string name="upgrade_firmware">Upgrade firmware</string>
    <string name="cannot_upgrade">Please connect the device that needs to be upgraded first!</string>
    <string name="sync_time">Complete time synchronization</string>
    <string name="sync_utc_time">Complete utc time synchronization</string>
    <string name="get_info">Get info</string>
    <string name="get_info_success">Successfully obtained device information</string>
    <string name="get_box_info">Successfully obtained box information</string>
    <string name="burn_info_success">Successfully burned information</string>
    <string name="no_charge">No charge</string>
    <string name="charging">Charging</string>
    <string name="full">Full</string>
    <string name="low_battery">Low battery</string>
    <string name="location_service">Enable location service</string>
    <string name="whether_continue_read">Do you want to continue reading the file?</string>
    <string name="pause">Pause</string>
    <string name="input_tips">Please enter complete information</string>
    <string name="wifi_tips">Please complete the first WiFi configuration first. After successful setup, you can directly configure WiFi by connecting to other devices.</string>
    <string name="hardware_version">Hardware：</string>
    <string name="software_version">Software：</string>
    <string name="battery">Battery：</string>
    <string name="device_name">Name：</string>
    <string name="device_mode">Mode：</string>
    <string name="reset">Reset</string>
    <string name="reset_success">Reset successful</string>
    <string name="reset_tips">Reset: Device restarts without deleting device data</string>
    <string name="factory_reset">Factory reset</string>
    <string name="factory_reset_success">Factory reset successful</string>
    <string name="factory_reset_tips">Restore factory: Clear device data and restart</string>
    <string name="factory_reset_all">Production status</string>
    <string name="factory_reset_all_success">Successfully restored production status</string>
    <string name="factory_reset_all_tips">Production status: Clear device data and shut down, activate charging device start</string>
    <string name="get_file_list">Successfully obtained file list, total</string>
    <string name="files">Files</string>
    <string name="process">Process：</string>
    <string name="still_left">Still left</string>
    <string name="read_error">Error reading file</string>
    <string name="wifi">WiFi：</string>
    <string name="wifi_password">Password：</string>
    <string name="connected">Connected</string>
    <string name="password_error">Password error</string>
    <string name="not_found_ssid">Unable to find SSID</string>
    <string name="no_wifi">WiFi not configured</string>
    <string name="server_address">Server：</string>
    <string name="server_port">Port：</string>
    <string name="cannot_connect">Cannot connect</string>
    <string name="connect_error">Connection error</string>
    <string name="no_server">Server not configured</string>
    <string name="get_file_list1">1.Get file list</string>
    <string name="get_file_list1_read_file2">1.Get file list 2.Read file (App log file in sdcard/Android/data/com.lepu.blepro.demo/files)</string>
    <string name="file_name_tips">(If the file name is empty, read all files in the list)</string>
    <string name="read_file2">2.Read file</string>
    <string name="file_name">File name</string>
    <string name="continue_read">Continue</string>
    <string name="get_wifi_list">WiFi list</string>
    <string name="set_wifi">Set WiFi</string>
    <string name="get_wifi">Get WiFi</string>
    <string name="get_server">Get server</string>
    <string name="set_server">Set server</string>
    <string name="oxy_files">Oxy file</string>
    <string name="duration">Duration：</string>
    <string name="sleep_result_path">Save the sleep analysis results file in sdcard/Android/data/com.lepu.blepro.demo/files/o2</string>
    <string name="spo2">Spo2（%）</string>
    <string name="pi">pi</string>
    <string name="pr">PR</string>
    <string name="motion">Motion</string>
    <string name="sleep_status_tips">Sleep status(0:Deep sleep,1:Light sleep,2:Rapid eye,3:Awaken,4:Ready sleep,5:No result)：</string>
    <string name="sleep_time_total">Total sleep time：</string>
    <string name="deep_sleep_time">Deep sleep time：</string>
    <string name="light_sleep_time">Light sleep time：</string>
    <string name="rapid_eye_time">Rapid eye time：</string>
    <string name="awake_time">Awaken time：</string>
    <string name="bp_files">Bp file</string>
    <string name="sys">SYS：</string>
    <string name="dia">DIA：</string>
    <string name="mean">MEAN：</string>
    <string name="burning_time">Burning time</string>
    <string name="ecg_files">Ecg/HR file</string>
    <string name="total_bytes">Total bytes：</string>
    <string name="total_size">Total size：</string>
    <string name="miss_size">Miss size：</string>
    <string name="error_bytes">Error bytes：</string>
    <string name="miss_percent">Miss percent：</string>
    <string name="error_percent">Error percent：</string>
    <string name="one_delay">One delay：</string>
    <string name="total_delay">Total delay：</string>
    <string name="throughput">Throughput：</string>
    <string name="speed">Speed：</string>
    <string name="stop_collect_ppg">请先停止采集PPG数据！</string>
    <string name="cannot_change_collect_type">PPG数据采集中不能修改采集类型！</string>
    <string name="select_collect_type">请至少选择一种PPG数据类型进行采集！</string>
    <string name="no_data_save">无数据保存</string>
    <string name="data_already_saved">数据已保存</string>
    <string name="data_saved_success">保存成功，可在历史记录查看</string>
    <string name="stop_test">请先停止测试</string>
    <string name="stop_record">结束录制</string>
    <string name="start_record">开始录制</string>
    <string name="collect_no_ppg_data">未采集到PPG数据</string>
    <string name="collect_no_wave_data">未采集到脉搏波数据</string>
    <string name="lead_state">导联状态：</string>
    <string name="measure_state">测量状态</string>
    <string name="er1_status_0">空闲待机(导联脱落)</string>
    <string name="er1_status_1">测量准备(主机丢弃前段波形阶段)</string>
    <string name="er1_status_2">记录中</string>
    <string name="er1_status_3">分析存储中</string>
    <string name="er1_status_4">已存储成功(满时间测量结束后一直停留此状态直到回空闲状态)</string>
    <string name="er1_status_5">记录小于30s(记录中状态直接切换至此状态)</string>
    <string name="er1_status_6">重测已达6次，进入待机</string>
    <string name="er1_status_7">导联断开</string>
    <string name="pc80b_status_0">正在检测通道</string>
    <string name="pc80b_status_1">正在准备测量</string>
    <string name="pc80b_status_2">测量进行中</string>
    <string name="pc80b_status_3">开始分析</string>
    <string name="pc80b_status_4">报告测量结果</string>
    <string name="pc80b_status_5">跟踪停止</string>
    <string name="lead_off">脱落</string>
    <string name="normal">正常</string>
    <string name="start_measure">开始测量</string>
    <string name="stop_measure">停止测量</string>
    <string name="deflate">放气：</string>
    <string name="yes">有</string>
    <string name="no">没有</string>
    <string name="pulse_signal">脉搏信号：</string>
    <string name="measure_result">测量结果</string>
    <string name="bp2_result_1">无法分析（袖套绑的太松，充气慢，缓慢漏气，气容大）</string>
    <string name="bp2_result_2">波形混乱（打气过程中检测到胳膊有动作或者有其他干扰）</string>
    <string name="bp2_result_3">信号弱，检测不到脉搏波（有干扰袖套的衣物）</string>
    <string name="bp2_result_other">设备错误（堵阀，血压测量超量程，袖套漏气严重，软件系统异常，硬件系统错误，以及其他异常）</string>
    <string name="poor_signal">信号弱：</string>
    <string name="start_time">开始测量时间：</string>
    <string name="arrhythmia">心率不齐</string>
    <string name="hr_normal">心率正常</string>
    <string name="user_id">用户id：</string>
    <string name="record_id">记录序号：</string>
    <string name="error_result">测量结果错误：</string>
    <string name="error_type">错误编码类型：</string>
    <string name="error_number">错误编码号：</string>
    <string name="lead_off_countdown">导联脱落倒计时：</string>
    <string name="battery_state">充电状态</string>
    <string name="no_probe_finger">探头脱落，手指未接入：</string>
    <string name="pulse_search">脉搏检测：</string>
    <string name="finger_search">血氧探头检测中：</string>
    <string name="abnormal_use">探头故障或使用不当：</string>
    <string name="low_temp">体温过低</string>
    <string name="high_temp">体温过高</string>
    <string name="temp">体温 ：</string>
    <string name="disturb_signal">干扰状态标记：</string>
    <string name="low_pi_signal">低灌注标记：</string>
    <string name="bar_chart">棒图：</string>
    <string name="seq_no">包序号：</string>
    <string name="temp_mode">测温模式</string>
    <string name="oxy_probe_state">血氧探头状态</string>
    <string name="no_probe">未接入电缆</string>
    <string name="insert_probe">已接入电缆</string>
    <string name="no_finger">未接入手指</string>
</resources>