<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.notifications.InfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <Button
                android:visibility="gone"
                android:id="@+id/bytes_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="原始数据显示开关" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/get_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_info"/>

                <Button
                    android:id="@+id/get_file_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_file_list1"
                    android:layout_marginStart="@dimen/dp_10"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorRed"
                android:text="@string/get_file_list1_read_file2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorRed"
                android:text="@string/file_name_tips"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/read_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_file2"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/file_name"
                    android:hint="@string/file_name"
                    android:textSize="18sp"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/pause_rf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"/>
                <Button
                    android:id="@+id/continue_rf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_read"
                    android:layout_marginStart="20dp"/>
                <Button
                    android:id="@+id/cancel_rf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"/>
                    <Button
                        android:id="@+id/factory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/factory_reset"
                        android:layout_marginStart="@dimen/dp_10"/>
                </LinearLayout>
                <Button
                    android:id="@+id/factory_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/factory_reset_all"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_tips"
                    android:textColor="@color/colorRed"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/factory_reset_tips"
                    android:textColor="@color/colorRed"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/factory_reset_all_tips"
                    android:textColor="@color/colorRed"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/wifi_config"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/get_wifi_route"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_wifi_list"/>
                    <Button
                        android:id="@+id/set_wifi_config"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:text="@string/set_wifi"/>
                    <Button
                        android:visibility="gone"
                        android:id="@+id/get_wifi_config"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:text="@string/get_wifi"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/wifi_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorRed"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/server_config"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/get_4g_server"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_server"/>
                    <Button
                        android:id="@+id/set_4g_server"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:text="@string/set_server"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/server_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorRed"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/get_mtu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="getMtu"/>
                <EditText
                    android:id="@+id/mtu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:hint="-----MTU-----"/>
                <Button
                    android:id="@+id/set_mtu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="setMtu"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/scan_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="扫描二维码"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wifi_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ecg_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/oxy_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bp_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ecn_rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"/>

            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device_info"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/send_cmd"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/response_cmd"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/receive_cmd"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"/>

            <TextView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(以下是数据解析日志)"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/info"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/process"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
